@@ -32,7 +32,7 @@ namespace voro {
  * functions.*/
 class wall {
 	public:
-		virtual ~wall() {};
+		virtual ~wall() {}
 		/** A pure virtual function for testing whether a point is
 		 * inside the wall object. */
 		virtual bool point_inside(double x,double y,double z) = 0;
@@ -477,7 +477,9 @@ class container : public container_base {
 		}
 	private:
 		voro_compute<container> vc;
-		inline void r_init(int ijk,int s) {};
+		inline void r_init(int ijk,int s) {}
+		inline void r_prime(double rv) {}
+		inline bool r_ctest(double crs,double mrs) {return crs>mrs;}
 		inline double r_cutoff(double lrs) {return lrs;}
 		inline double r_max_add(double rs) {return rs;}
 		inline double r_current_sub(double rs,int ijk,int q) {return rs;}
@@ -691,13 +693,14 @@ class container_poly : public container_base {
 		bool find_voronoi_cell(double x,double y,double z,double &rx,double &ry,double &rz,int &pid);
 	private:
 		voro_compute<container_poly> vc;
-		double r_rad,r_mul;
+		double r_rad,r_mul,r_val;
 		inline void r_init(int ijk,int s) {
-			r_rad=p[ijk][4*s+3];
-			r_mul=1+(r_rad*r_rad-max_radius*max_radius)/((max_radius+r_rad)*(max_radius+r_rad));
-			r_rad*=r_rad;
+			r_rad=p[ijk][4*s+3];r_rad*=r_rad;
+			r_mul=r_rad*r_rad-max_radius*max_radius;
 		}
-		inline double r_cutoff(double lrs) {return r_mul*lrs;}
+		inline void r_prime(double rv) {r_val=1+r_mul/rv;}
+		inline bool r_ctest(double crs,double mrs) {double tmp=crs+r_mul;return tmp>0&&crs*tmp>mrs;}
+		inline double r_cutoff(double x) {return x*r_val;}
 		inline double r_max_add(double rs) {return rs+max_radius*max_radius;}
 		inline double r_current_sub(double rs,int ijk,int q) {
 			return rs-p[ijk][4*q+3]*p[ijk][4*q+3];
