@@ -405,7 +405,9 @@ class container_periodic : public container_periodic_base {
 		}
 	private:
 		voro_compute<container_periodic> vc;
-		inline void r_init(int ijk,int s) {};
+		inline void r_init(int ijk,int s) {}
+		inline void r_prime(double rv) {};
+		inline bool r_ctest(double crs,double mrs) {return crs>mrs;}
 		inline double r_cutoff(double lrs) {return lrs;}
 		inline double r_max_add(double rs) {return rs;}
 		inline double r_current_sub(double rs,int ijk,int q) {return rs;}
@@ -620,13 +622,17 @@ class container_periodic_poly : public container_periodic_base {
 		bool find_voronoi_cell(double x,double y,double z,double &rx,double &ry,double &rz,int &pid);
 	private:
 		voro_compute<container_periodic_poly> vc;
-		double r_rad,r_mul;
+		double r_rad,r_mul,r_val;
 		inline void r_init(int ijk,int s) {
 			r_rad=p[ijk][4*s+3];
-			r_mul=1+(r_rad*r_rad-max_radius*max_radius)/((max_radius+r_rad)*(max_radius+r_rad));
+			r_mul=r_rad*r_rad-max_radius*max_radius;
 			r_rad*=r_rad;
 		}
-		inline double r_cutoff(double lrs) {return r_mul*lrs;}
+		inline void r_prime(double rv) {
+			r_val=1+r_mul/rv;
+		}
+		inline bool r_ctest(double crs,double mrs) {double tmp=crs+r_mul;return tmp>0&&crs*tmp>mrs;}
+		inline double r_cutoff(double x) {return x+r_mul*sqrt(x);}
 		inline double r_max_add(double rs) {return rs+max_radius*max_radius;}
 		inline double r_current_sub(double rs,int ijk,int q) {
 			return rs-p[ijk][4*q+3]*p[ijk][4*q+3];
